# self_study

./: .env.sample  LICENSE  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_testresult_is_passed.py  0004_alter_test_material.py  0005_alter_test_description_alter_test_material.py
htmlcov/: class_index.html  index.html
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
